# MockDriveThruBot

./: README.md
backend/: .gitignore  main.py  pyproject.toml
frontend/: package-lock.json  package.json
frontend/src/: app.html
frontend/src/lib/components/ui/button/: index.ts
frontend/src/lib/components/ui/input/: input.svelte
frontend/src/lib/components/ui/modal/: modal.svelte
frontend/src/lib/components/ui/orderHist/: item.svelte  orderHist.svelte
frontend/src/lib/components/ui/totalSec/: totalSection.svelte
frontend/src/routes/: +page.svelte
